crates/tlang_parser/tests/snapshots/parser_visibility__private_function_declaration_default.snap
---
source: crates/tlang_parser/tests/parser_visibility.rs
expression: "parse! (\"fn bar() { 2 }\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 8,
      kind: FunctionDeclaration(FunctionDeclaration(
        id: 7,
        visibility: Private,
        name: Expr(
          id: 3,
          kind: Path(Path(
            segments: [
              Ident(
                name: "bar",
                span: Span(
                  start: 3,
                  end: 6,
                  start_lc: LineColumn(
                    line: 0,
                    column: 3,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 6,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: 3,
              end: 6,
              start_lc: LineColumn(
                line: 0,
                column: 3,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 6,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 3,
            end: 6,
            start_lc: LineColumn(
              line: 0,
              column: 3,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 6,
            ),
          ),
        ),
        type_params: [],
        parameters: [],
        params_span: Span(
          start: 6,
          end: 8,
          start_lc: LineColumn(
            line: 0,
            column: 6,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 8,
          ),
        ),
        guard: None,
        return_type_annotation: None,
        body: Block(
          id: 6,
          statements: [],
          expression: Some(Expr(
            id: 5,
            kind: Literal(UnsignedInteger(2)),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 11,
              end: 12,
              start_lc: LineColumn(
                line: 0,
                column: 11,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 12,
              ),
            ),
          )),
          span: Span(
            start: 9,
            end: 14,
            start_lc: LineColumn(
              line: 0,
              column: 9,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 14,
            ),
          ),
        ),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 14,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 14,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 14,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 14,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 14,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 14,
    ),
  ),
)
