crates/tlang_parser/tests/snapshots/parser_visibility__pub_enum_declaration.snap
---
source: crates/tlang_parser/tests/parser_visibility.rs
expression: "parse!\n(indoc!\n{\"\n        pub enum Option {\n            Some(value),\n            None,\n        }\n    \"})"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 7,
      kind: EnumDeclaration(EnumDeclaration(
        visibility: Public,
        name: Ident(
          name: "Option",
          span: Span(
            start: 9,
            end: 15,
            start_lc: LineColumn(
              line: 0,
              column: 9,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 15,
            ),
          ),
        ),
        variants: [
          EnumVariant(
            id: 5,
            name: Ident(
              name: "Some",
              span: Span(
                start: 22,
                end: 26,
                start_lc: LineColumn(
                  line: 1,
                  column: 5,
                ),
                end_lc: LineColumn(
                  line: 1,
                  column: 9,
                ),
              ),
            ),
            parameters: [
              StructField(
                id: 4,
                name: Ident(
                  name: "0",
                  span: Span(
                    start: 0,
                    end: 0,
                    start_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
                ty: Ty(
                  id: 3,
                  kind: Path(Path(
                    segments: [
                      Ident(
                        name: "value",
                        span: Span(
                          start: 27,
                          end: 32,
                          start_lc: LineColumn(
                            line: 1,
                            column: 10,
                          ),
                          end_lc: LineColumn(
                            line: 1,
                            column: 15,
                          ),
                        ),
                      ),
                    ],
                    res: Unresolved,
                    span: Span(
                      start: 27,
                      end: 32,
                      start_lc: LineColumn(
                        line: 1,
                        column: 10,
                      ),
                      end_lc: LineColumn(
                        line: 1,
                        column: 15,
                      ),
                    ),
                  )),
                  parameters: [],
                  span: Span(
                    start: 0,
                    end: 0,
                    start_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
              ),
            ],
            discriminant: None,
            span: Span(
              start: 22,
              end: 33,
              start_lc: LineColumn(
                line: 1,
                column: 5,
              ),
              end_lc: LineColumn(
                line: 1,
                column: 16,
              ),
            ),
          ),
          EnumVariant(
            id: 6,
            name: Ident(
              name: "None",
              span: Span(
                start: 39,
                end: 43,
                start_lc: LineColumn(
                  line: 2,
                  column: 5,
                ),
                end_lc: LineColumn(
                  line: 2,
                  column: 9,
                ),
              ),
            ),
            parameters: [],
            discriminant: None,
            span: Span(
              start: 39,
              end: 43,
              start_lc: LineColumn(
                line: 2,
                column: 5,
              ),
              end_lc: LineColumn(
                line: 2,
                column: 9,
              ),
            ),
          ),
        ],
      )),
      span: Span(
        start: 0,
        end: 46,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 3,
          column: 2,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 46,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 3,
      column: 2,
    ),
  ),
)
