crates/tlang_parser/tests/snapshots/parser_visibility__pub_function_declaration.snap
---
source: crates/tlang_parser/tests/parser_visibility.rs
expression: "parse! (\"pub fn foo() { 1 }\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 8,
      kind: FunctionDeclaration(FunctionDeclaration(
        id: 7,
        visibility: Public,
        name: Expr(
          id: 3,
          kind: Path(Path(
            segments: [
              Ident(
                name: "foo",
                span: Span(
                  start: 7,
                  end: 10,
                  start_lc: LineColumn(
                    line: 0,
                    column: 7,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 10,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: 7,
              end: 10,
              start_lc: LineColumn(
                line: 0,
                column: 7,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 10,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 7,
            end: 10,
            start_lc: LineColumn(
              line: 0,
              column: 7,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 10,
            ),
          ),
        ),
        parameters: [],
        params_span: Span(
          start: 10,
          end: 12,
          start_lc: LineColumn(
            line: 0,
            column: 10,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 12,
          ),
        ),
        guard: None,
        return_type_annotation: None,
        body: Block(
          id: 6,
          statements: [],
          expression: Some(Expr(
            id: 5,
            kind: Literal(UnsignedInteger(1)),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 15,
              end: 16,
              start_lc: LineColumn(
                line: 0,
                column: 15,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 16,
              ),
            ),
          )),
          span: Span(
            start: 13,
            end: 18,
            start_lc: LineColumn(
              line: 0,
              column: 13,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 18,
            ),
          ),
        ),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 4,
          end: 18,
          start_lc: LineColumn(
            line: 0,
            column: 4,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 18,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 18,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 18,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 18,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 18,
    ),
  ),
)
