crates/tlang_parser/tests/snapshots/parser_visibility__pub_multi_clause_function_declaration.snap
---
source: crates/tlang_parser/tests/parser_visibility.rs
expression: "parse!\n(indoc!\n{\"\n        pub fn factorial(0) { 1 }\n        pub fn factorial(n) { n * factorial(n - 1) }\n    \"})"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 21,
      kind: FunctionDeclarations([
        FunctionDeclaration(
          id: 8,
          visibility: Public,
          name: Expr(
            id: 3,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "factorial",
                  span: Span(
                    start: 7,
                    end: 16,
                    start_lc: LineColumn(
                      line: 0,
                      column: 7,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 16,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 7,
                end: 16,
                start_lc: LineColumn(
                  line: 0,
                  column: 7,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 16,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 7,
              end: 16,
              start_lc: LineColumn(
                line: 0,
                column: 7,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 16,
              ),
            ),
          ),
          type_params: [],
          parameters: [
            FunctionParameter(
              pattern: Pat(
                id: 4,
                kind: Literal(UnsignedInteger(0)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 17,
                  end: 18,
                  start_lc: LineColumn(
                    line: 0,
                    column: 17,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 18,
                  ),
                ),
              ),
              type_annotation: None,
              span: Span(
                start: 17,
                end: 18,
                start_lc: LineColumn(
                  line: 0,
                  column: 17,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 18,
                ),
              ),
            ),
          ],
          params_span: Span(
            start: 16,
            end: 19,
            start_lc: LineColumn(
              line: 0,
              column: 16,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 19,
            ),
          ),
          guard: None,
          return_type_annotation: None,
          body: Block(
            id: 7,
            statements: [],
            expression: Some(Expr(
              id: 6,
              kind: Literal(UnsignedInteger(1)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 22,
                end: 23,
                start_lc: LineColumn(
                  line: 0,
                  column: 22,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 23,
                ),
              ),
            )),
            span: Span(
              start: 20,
              end: 25,
              start_lc: LineColumn(
                line: 0,
                column: 20,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 25,
              ),
            ),
          ),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 4,
            end: 25,
            start_lc: LineColumn(
              line: 0,
              column: 4,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 25,
            ),
          ),
        ),
        FunctionDeclaration(
          id: 20,
          visibility: Public,
          name: Expr(
            id: 9,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "factorial",
                  span: Span(
                    start: 33,
                    end: 42,
                    start_lc: LineColumn(
                      line: 1,
                      column: 8,
                    ),
                    end_lc: LineColumn(
                      line: 1,
                      column: 17,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 33,
                end: 42,
                start_lc: LineColumn(
                  line: 1,
                  column: 8,
                ),
                end_lc: LineColumn(
                  line: 1,
                  column: 17,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 33,
              end: 42,
              start_lc: LineColumn(
                line: 1,
                column: 8,
              ),
              end_lc: LineColumn(
                line: 1,
                column: 17,
              ),
            ),
          ),
          type_params: [],
          parameters: [
            FunctionParameter(
              pattern: Pat(
                id: 10,
                kind: Identifier(Ident(
                  name: "n",
                  span: Span(
                    start: 43,
                    end: 44,
                    start_lc: LineColumn(
                      line: 1,
                      column: 18,
                    ),
                    end_lc: LineColumn(
                      line: 1,
                      column: 19,
                    ),
                  ),
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 43,
                  end: 44,
                  start_lc: LineColumn(
                    line: 1,
                    column: 18,
                  ),
                  end_lc: LineColumn(
                    line: 1,
                    column: 19,
                  ),
                ),
              ),
              type_annotation: None,
              span: Span(
                start: 43,
                end: 44,
                start_lc: LineColumn(
                  line: 1,
                  column: 18,
                ),
                end_lc: LineColumn(
                  line: 1,
                  column: 19,
                ),
              ),
            ),
          ],
          params_span: Span(
            start: 42,
            end: 45,
            start_lc: LineColumn(
              line: 1,
              column: 17,
            ),
            end_lc: LineColumn(
              line: 1,
              column: 20,
            ),
          ),
          guard: None,
          return_type_annotation: None,
          body: Block(
            id: 19,
            statements: [],
            expression: Some(Expr(
              id: 18,
              kind: BinaryOp(BinaryOpExpression(
                op: Mul,
                lhs: Expr(
                  id: 12,
                  kind: Path(Path(
                    segments: [
                      Ident(
                        name: "n",
                        span: Span(
                          start: 48,
                          end: 49,
                          start_lc: LineColumn(
                            line: 1,
                            column: 23,
                          ),
                          end_lc: LineColumn(
                            line: 1,
                            column: 24,
                          ),
                        ),
                      ),
                    ],
                    res: Unresolved,
                    span: Span(
                      start: 48,
                      end: 49,
                      start_lc: LineColumn(
                        line: 1,
                        column: 23,
                      ),
                      end_lc: LineColumn(
                        line: 1,
                        column: 24,
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 48,
                    end: 49,
                    start_lc: LineColumn(
                      line: 1,
                      column: 23,
                    ),
                    end_lc: LineColumn(
                      line: 1,
                      column: 24,
                    ),
                  ),
                ),
                rhs: Expr(
                  id: 17,
                  kind: Call(CallExpression(
                    callee: Expr(
                      id: 13,
                      kind: Path(Path(
                        segments: [
                          Ident(
                            name: "factorial",
                            span: Span(
                              start: 52,
                              end: 61,
                              start_lc: LineColumn(
                                line: 1,
                                column: 27,
                              ),
                              end_lc: LineColumn(
                                line: 1,
                                column: 36,
                              ),
                            ),
                          ),
                        ],
                        res: Unresolved,
                        span: Span(
                          start: 52,
                          end: 61,
                          start_lc: LineColumn(
                            line: 1,
                            column: 27,
                          ),
                          end_lc: LineColumn(
                            line: 1,
                            column: 36,
                          ),
                        ),
                      )),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: 52,
                        end: 61,
                        start_lc: LineColumn(
                          line: 1,
                          column: 27,
                        ),
                        end_lc: LineColumn(
                          line: 1,
                          column: 36,
                        ),
                      ),
                    ),
                    arguments: [
                      Expr(
                        id: 16,
                        kind: BinaryOp(BinaryOpExpression(
                          op: Sub,
                          lhs: Expr(
                            id: 14,
                            kind: Path(Path(
                              segments: [
                                Ident(
                                  name: "n",
                                  span: Span(
                                    start: 62,
                                    end: 63,
                                    start_lc: LineColumn(
                                      line: 1,
                                      column: 37,
                                    ),
                                    end_lc: LineColumn(
                                      line: 1,
                                      column: 38,
                                    ),
                                  ),
                                ),
                              ],
                              res: Unresolved,
                              span: Span(
                                start: 62,
                                end: 63,
                                start_lc: LineColumn(
                                  line: 1,
                                  column: 37,
                                ),
                                end_lc: LineColumn(
                                  line: 1,
                                  column: 38,
                                ),
                              ),
                            )),
                            leading_comments: [],
                            trailing_comments: [],
                            span: Span(
                              start: 62,
                              end: 63,
                              start_lc: LineColumn(
                                line: 1,
                                column: 37,
                              ),
                              end_lc: LineColumn(
                                line: 1,
                                column: 38,
                              ),
                            ),
                          ),
                          rhs: Expr(
                            id: 15,
                            kind: Literal(UnsignedInteger(1)),
                            leading_comments: [],
                            trailing_comments: [],
                            span: Span(
                              start: 66,
                              end: 67,
                              start_lc: LineColumn(
                                line: 1,
                                column: 41,
                              ),
                              end_lc: LineColumn(
                                line: 1,
                                column: 42,
                              ),
                            ),
                          ),
                        )),
                        leading_comments: [],
                        trailing_comments: [],
                        span: Span(
                          start: 62,
                          end: 67,
                          start_lc: LineColumn(
                            line: 1,
                            column: 37,
                          ),
                          end_lc: LineColumn(
                            line: 1,
                            column: 42,
                          ),
                        ),
                      ),
                    ],
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 52,
                    end: 68,
                    start_lc: LineColumn(
                      line: 1,
                      column: 27,
                    ),
                    end_lc: LineColumn(
                      line: 1,
                      column: 43,
                    ),
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 48,
                end: 68,
                start_lc: LineColumn(
                  line: 1,
                  column: 23,
                ),
                end_lc: LineColumn(
                  line: 1,
                  column: 43,
                ),
              ),
            )),
            span: Span(
              start: 46,
              end: 70,
              start_lc: LineColumn(
                line: 1,
                column: 21,
              ),
              end_lc: LineColumn(
                line: 1,
                column: 45,
              ),
            ),
          ),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 26,
            end: 70,
            start_lc: LineColumn(
              line: 1,
              column: 1,
            ),
            end_lc: LineColumn(
              line: 1,
              column: 45,
            ),
          ),
        ),
      ]),
      span: Span(
        start: 0,
        end: 70,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 1,
          column: 45,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 70,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 1,
      column: 45,
    ),
  ),
)
