crates/tlang_parser/tests/snapshots/parser_visibility__pub_struct_declaration.snap
---
source: crates/tlang_parser/tests/parser_visibility.rs
expression: "parse! (\"pub struct Point { x: Int, y: Int }\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 7,
      kind: StructDeclaration(StructDeclaration(
        visibility: Public,
        name: Ident(
          name: "Point",
          span: Span(
            start: 11,
            end: 16,
            start_lc: LineColumn(
              line: 0,
              column: 11,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 16,
            ),
          ),
        ),
        fields: [
          StructField(
            id: 4,
            name: Ident(
              name: "x",
              span: Span(
                start: 19,
                end: 20,
                start_lc: LineColumn(
                  line: 0,
                  column: 19,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 20,
                ),
              ),
            ),
            ty: Ty(
              id: 3,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "Int",
                    span: Span(
                      start: 22,
                      end: 25,
                      start_lc: LineColumn(
                        line: 0,
                        column: 22,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 25,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 22,
                  end: 25,
                  start_lc: LineColumn(
                    line: 0,
                    column: 22,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 25,
                  ),
                ),
              )),
              parameters: [],
              span: Span(
                start: 0,
                end: 0,
                start_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
              ),
            ),
          ),
          StructField(
            id: 6,
            name: Ident(
              name: "y",
              span: Span(
                start: 27,
                end: 28,
                start_lc: LineColumn(
                  line: 0,
                  column: 27,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 28,
                ),
              ),
            ),
            ty: Ty(
              id: 5,
              kind: Path(Path(
                segments: [
                  Ident(
                    name: "Int",
                    span: Span(
                      start: 30,
                      end: 33,
                      start_lc: LineColumn(
                        line: 0,
                        column: 30,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 33,
                      ),
                    ),
                  ),
                ],
                res: Unresolved,
                span: Span(
                  start: 30,
                  end: 33,
                  start_lc: LineColumn(
                    line: 0,
                    column: 30,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 33,
                  ),
                ),
              )),
              parameters: [],
              span: Span(
                start: 0,
                end: 0,
                start_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
              ),
            ),
          ),
        ],
      )),
      span: Span(
        start: 0,
        end: 35,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 35,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 35,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 35,
    ),
  ),
)
